# reykjalundur-status

./: .gitignore  LICENSE  Procfile  README.md  requirements.txt
client/: Dockerfile  client.py  reykjalundur.conf  supervisord.conf
client/reykjalundur/: client.py  config.py
server/: Procfile  pyproject.toml  requirements.txt
server/reykjalundur/: __init__.py  main.py  settings.py
server/reykjalundur/common/: config.py  email.py  models.py
server/reykjalundur/static/: scripts.js  styles.css
server/reykjalundur/templates/: index.html
